# pirq

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.pirq/: config.json
src/pirq/: __init__.py  __main__.py  config.py  orchestrator.py  state.py
src/pirq/claude/: __init__.py  logs.py
src/pirq/gates/: __init__.py  backup.py  base.py  loop_detect.py  rate_limit.py  session.py  task_state.py  tokens.py
src/pirq/git/: __init__.py  manager.py
src/pirq/handlers/: __init__.py
src/pirq/logs/: __init__.py  audit.py  session.py  verify.py
src/pirq/orch/: __init__.py  parser.py
src/pirq/tokens/: __init__.py  pacing.py  tracker.py
src/pirq/utils/: __init__.py  logging.py
tests/: __init__.py  test_cli.py  test_config.py  test_gates.py
